test/schemas/invalid_parser/recursive_def.blink
One ->
    u8 first,
    Two second

Two ->
    u8 first,
    One second
